# src/endpoints/articles.ts
@@ -20,7 +20,7 @@ export class EndpointArticles extends ProxyController {
         @Query() _limit?: number,
         @Query() _start?: number,
         @Header() article?: number,
-        @Header('YEAR') year?: number
+        @Header() year?: number
     ): Promise<ArticlesResponse> {
         return await this.proxy(request);
     }
